@@ -1,5 +1,6 @@
 intended v0.1.21
 + start implementing std/time
++ implement copy - shallow object/array copying, with a flag for deep copying
 
 v0.1.20
 + ui/Component API cleanup
